# Anova

./: LICENSE  README.md  main.py  pyproject.toml
assets/: AnovaOneWay.ui  ui_AnovaOneWay.py  util.py
