[tool.poetry]
name = "anova"
version = "0.1.0"
description = "One-way Anova is a test used to determine whether there is a statistically significant difference between the mean values of more than one group."
authors = ["chraem <calumbiranc@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.8.1"
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
